--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
 
     <div id="main-content" style="display:none;">
-        <h1 id="title">Happy Vietnamese Women's Day</h1>
+        <h1 id="title" class="main-title">Happy Vietnamese Women's Day</h1>
 
         <button id="fillButton">
             <i class="fa-solid fa-gift"></i>
